--- a/css/style.less
+++ b/css/style.less
@@ -1,6 +1,10 @@
-// "out": true, "compress": true, "autoprefix": "last 2 versions"
 .header
 {
   padding:13px 0 205px;
   height: 100vh;
+}
+
+.menu .active a
+{
+   color: #f80759;
 }
