--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,1 @@
-.header{padding:13px 0 205px;height:100vh}.menu .active a{color:#f80759}
+.main{padding:13px 0 205px;height:100vh}.menu .active a{color:#f80759}.top-nav-collapse{background:rgba(0,0,0,.8);padding:25px 0}.header{position:fixed;z-index:999;width:100%}.header .menu-grid{display:flex;align-items:center}.logo-content{display:flex}section.contact{padding:55px 0 30px}
