--- a/css/style.less
+++ b/css/style.less
@@ -1,4 +1,4 @@
-.header
+.main
 {
   padding:13px 0 205px;
   height: 100vh;
@@ -7,4 +7,33 @@
 .menu .active a
 {
    color: #f80759;
+}
+
+.top-nav-collapse 
+{
+  background: rgba(0, 0, 0, 0.8);
+  padding: 25px 0;
+}
+
+.header
+{
+   position: fixed;
+   z-index: 999;
+   width: 100%;
+
+   .menu-grid
+   {
+      display: flex;
+      align-items: center;
+   }
+}
+
+.logo-content
+{
+   display: flex;
+}
+
+section.contact 
+{
+   padding: 55px 0 30px;
 }
