--- a/css/style.less
+++ b/css/style.less
@@ -6,6 +6,12 @@
   align-items: center;
 }
 
+.menu-parent
+{
+  display: flex;
+  align-items: center;
+}
+
 .menu .active a
 {
    color: #f80759;
@@ -63,6 +69,7 @@ section.contact
    {
       padding: 0;
       position: absolute;
+      display: block;
       width: 100vw;
       top: 90px;
       left: 0;
